src/modules/pg/hero/hero.css
section {
  align-items: center;
  background: url("/resources/hero-grid.svg") repeat-x;
  background-position: bottom;
  background-size: 1500px;
  display: flex;
  flex-direction: column;
  height: 40vh;
  justify-content: space-between;
  text-align: center;
}

.full {
  height: calc(100vh - 120px);
}

.text {
  font-size: 2.5vh;
  line-height: 1.2;
  max-width: 1080px;
  margin: 0 8rem;
}

.heading {
  font-size: 4vh;
  letter-spacing: -3px;
}

.scroll {
  align-items: center;
  border-radius: 50px;
  color: hsl(var(--primary-color));
  display: flex;
  font-size: 1.1rem;
  font-weight: 500;
  margin-bottom: 12rem;
  padding: .5rem 1rem;
  text-decoration: none;
  transition: background-color .3s ease-in;
}

.scroll:hover {
  background-color: rgba(255, 255, 255, .25);
}

.scroll pg-icon {
  margin-right: .25rem;
  position: relative;
  top: 4px;
}

@media only screen and (max-width: 800px) {
  section {
    background-position: 0 2rem;
  }

  .text {
    font-size: 2vh;
    margin: 0 2rem;
  }
  
  .heading {
    font-size: 2.5vh;
    letter-spacing: -1px;
  }
}

